# A4ijkplayer

./: README.md  gradle.properties  settings.gradle
A4ijkplayer/: .gitignore  build.gradle
A4ijkplayer/src/androidTest/java/com/alanwang4523/a4ijkplayer/: ExampleInstrumentedTest.java
A4ijkplayer/src/main/cpp/: CMakeLists.txt
A4ijkplayer/src/main/cpp/ijkmedia/ijkplayer/: ijkversion.h
A4ijkplayer/src/main/cpp/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
A4ijkplayer/src/main/cpp/otherlibs/ffmpeg/include/arm64-v8a/libffmpeg/: config.h
A4ijkplayer/src/main/cpp/otherlibs/ffmpeg/include/armeabi-v7a/libffmpeg/: config.h
A4ijkplayer/src/main/cpp/otherlibs/ffmpeg/include/libffmpeg/: config.h
A4ijkplayer/src/main/java/net/surina/: ExampleActivity.java
A4ijkplayer/src/main/java/tv/danmaku/ijk/media/player/: IjkMediaPlayer.java
A4ijkplayer/src/test/java/com/alanwang4523/a4ijkplayer/: ExampleUnitTest.java
A4ijkplayerDemo/: build.gradle
A4ijkplayerDemo/src/androidTest/java/com/alanwang4523/a4ijkplayerdemo/: ExampleInstrumentedTest.java
A4ijkplayerDemo/src/main/: AndroidManifest.xml
A4ijkplayerDemo/src/main/java/com/alanwang4523/a4ijkplayerdemo/: TestIjkPlayerActivity.java
A4ijkplayerDemo/src/main/java/com/alanwang4523/a4ijkplayerdemo/activities/: FileExplorerActivity.java  MainActivity.java  RecentMediaActivity.java  SampleMediaActivity.java  SettingsActivity.java  TestIjkPlayerActivity.java  VideoActivity.java
A4ijkplayerDemo/src/main/java/com/alanwang4523/a4ijkplayerdemo/application/: AppActivity.java  Settings.java
A4ijkplayerDemo/src/main/java/com/alanwang4523/a4ijkplayerdemo/content/: PathCursor.java  PathCursorLoader.java  RecentMediaStorage.java
A4ijkplayerDemo/src/main/java/com/alanwang4523/a4ijkplayerdemo/eventbus/: FileExplorerEvents.java
A4ijkplayerDemo/src/main/java/com/alanwang4523/a4ijkplayerdemo/fragments/: FileListFragment.java  RecentMediaListFragment.java  SampleMediaListFragment.java  SettingsFragment.java  TracksFragment.java
A4ijkplayerDemo/src/main/java/com/alanwang4523/a4ijkplayerdemo/services/: MediaPlayerService.java
A4ijkplayerDemo/src/main/java/com/alanwang4523/a4ijkplayerdemo/widget/: AndroidMediaController.java  FileMediaDataSource.java  IMediaController.java  IRenderView.java  IjkListPreference.java  IjkVideoView.java  InfoHudViewHolder.java  MeasureHelper.java  MediaPlayerCompat.java  SurfaceRenderView.java  TableLayoutBinder.java  TextureRenderView.java
A4ijkplayerDemo/src/main/res/layout/: activity_main.xml  activity_player.xml  activity_test_ijkplayer.xml  widget_toolbar.xml
A4ijkplayerDemo/src/main/res/values/: colors.xml  strings.xml  themes.xml
A4ijkplayerDemo/src/main/res/xml/: settings.xml
A4ijkplayerdemo/: .gitignore  build.gradle
A4ijkplayerdemo/src/main/: AndroidManifest.xml
A4ijkplayerdemo/src/main/java/com/alanwang4523/a4ijkplayerdemo/: MainActivity.java  TestIjkPlayerActivity.java
A4ijkplayerdemo/src/main/res/values/: strings.xml  themes.xml
A4ijkplayerdemo/src/main/res/values-night/: themes.xml
A4ijkplayerdemo/src/test/java/com/alanwang4523/a4ijkplayerdemo/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/alanwang4523/a4ijkplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/alanwang4523/a4ijkplayer/: MainActivity.java
app/src/main/java/com/alanwang4523/a4ijkplayer/app/: MainActivity.java  TestIjkPlayerActivity.java
app/src/main/res/layout/: activity_main.xml  activity_test_ijkplayer.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
